ws: handle in unicode & ascii

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "git-blame.gitWebUrl": ""
+  "git-blame.gitWebUrl": "",
+  "rust-analyzer.linkedProjects": [
+    "./preview/Cargo.toml"
+  ]
 }
